// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`printToDot > computedAmazonView 1`] = `
"digraph {
  layout = "dot";
  compound = true;
  pad = 0.1042;
  rankdir = "TB";
  outputorder = "nodesfirst";
  nodesep = 0.8334;
  ranksep = 0.9375;
  pack = 15;
  packmode = "array_t";
  graph [
    fontname = "Helvetica";
    labeljust = "l";
    fontsize = 9;
  ];
  edge [
    fontname = "Helvetica";
    fontsize = 10.5;
    style = "solid";
    penwidth = 2;
    arrowsize = 0.8;
    color = "#b1b1b1";
    fontcolor = "#b1b1b1";
  ];
  node [
    fontname = "Helvetica";
    fontsize = 14.25;
    shape = "rect";
    width = 3.3334;
    height = 1.875;
    style = "filled,rounded";
    fillcolor = "#3b82f6";
    margin = 0.2084;
    penwidth = 0;
  ];
  "backend" [
    likec4_id = "cloud.backend";
    likec4_level = 1;
    label = <<FONT COLOR="#eff6ff" POINT-SIZE="14.25">Backend</FONT>>;
    sortv = 0;
  ];
  "s3" [
    likec4_id = "amazon.s3";
    likec4_level = 1;
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="7"><TR><TD><FONT COLOR="#eff6ff" POINT-SIZE="14.25">S3</FONT></TD></TR><TR><TD><FONT COLOR="#bfdbfe" POINT-SIZE="10.5">S3 is a storage service</FONT></TD></TR></TABLE>>;
    sortv = 1;
  ];
  subgraph "cluster_cloud" {
    likec4_id = "cloud";
    likec4_level = 0;
    label = <<B>CLOUD</B>>;
    likec4_depth = 1;
    graph [
      fontsize = 9.75;
      style = "rounded";
      margin = 30;
    ];
    "backend";
  }
  subgraph "cluster_amazon" {
    likec4_id = "amazon";
    likec4_level = 0;
    label = <<B>AMAZON</B>>;
    likec4_depth = 1;
    graph [
      fontsize = 9.75;
      style = "rounded";
      margin = 30;
    ];
    "s3";
  }
  "backend" -> "s3" [
    likec4_id = "cloud.backend:amazon.s3";
    weight = 5;
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="3" CELLSPACING="0"><TR><TD><FONT POINT-SIZE="10.5">persists artifacts</FONT></TD></TR></TABLE>>;
    nojustify = true;
  ];
}"
`;

exports[`printToDot > computedCloud3levels 1`] = `
"digraph {
  layout = "dot";
  compound = true;
  pad = 0.1042;
  rankdir = "TB";
  outputorder = "nodesfirst";
  nodesep = 0.8334;
  ranksep = 0.9375;
  pack = 15;
  packmode = "array_t";
  graph [
    fontname = "Helvetica";
    labeljust = "l";
    fontsize = 9;
  ];
  edge [
    fontname = "Helvetica";
    fontsize = 10.5;
    style = "solid";
    penwidth = 2;
    arrowsize = 0.8;
    color = "#b1b1b1";
    fontcolor = "#b1b1b1";
  ];
  node [
    fontname = "Helvetica";
    fontsize = 14.25;
    shape = "rect";
    width = 3.3334;
    height = 1.875;
    style = "filled,rounded";
    fillcolor = "#3b82f6";
    margin = 0.2084;
    penwidth = 0;
  ];
  "customer" [
    likec4_id = "customer";
    likec4_level = 0;
    label = <<FONT COLOR="#eff6ff" POINT-SIZE="14.25">customer</FONT>>;
    sortv = 0;
  ];
  "dashboard" [
    likec4_id = "cloud.frontend.dashboard";
    likec4_level = 1;
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="7"><TR><TD><FONT COLOR="#eff6ff" POINT-SIZE="14.25">Customer Dashboard Webapp</FONT></TD></TR><TR><TD><FONT COLOR="#bfdbfe" POINT-SIZE="10.5">The customer dashboard is a webapp that<BR/>allows customers to view their data.<BR/></FONT></TD></TR></TABLE>>;
    sortv = 1;
  ];
  "support" [
    likec4_id = "support";
    likec4_level = 0;
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="7"><TR><TD><FONT COLOR="#eff6ff" POINT-SIZE="14.25">Support Engineer</FONT></TD></TR><TR><TD><FONT COLOR="#bfdbfe" POINT-SIZE="10.5">Support engineers are responsible for<BR/>supporting customers<BR/></FONT></TD></TR></TABLE>>;
    sortv = 2;
  ];
  "adminpanel" [
    likec4_id = "cloud.frontend.adminPanel";
    likec4_level = 1;
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="7"><TR><TD><FONT COLOR="#eff6ff" POINT-SIZE="14.25">Admin Panel Webapp</FONT></TD></TR><TR><TD><FONT COLOR="#bfdbfe" POINT-SIZE="10.5">The admin panel is a webapp that allows<BR/>support staff to manage customer data.<BR/></FONT></TD></TR></TABLE>>;
    sortv = 3;
  ];
  "graphql" [
    likec4_id = "cloud.backend.graphql";
    likec4_level = 2;
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="7"><TR><TD><FONT COLOR="#eff6ff" POINT-SIZE="14.25">Graphql API</FONT></TD></TR><TR><TD><FONT COLOR="#bfdbfe" POINT-SIZE="10.5">Component that allows to query data via<BR/>GraphQL.<BR/></FONT></TD></TR></TABLE>>;
    sortv = 4;
  ];
  "storage" [
    likec4_id = "cloud.backend.storage";
    likec4_level = 2;
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="7"><TR><TD><FONT COLOR="#eff6ff" POINT-SIZE="14.25">Backend Storage</FONT></TD></TR><TR><TD><FONT COLOR="#bfdbfe" POINT-SIZE="10.5">The backend storage is a component that<BR/>stores data.<BR/></FONT></TD></TR></TABLE>>;
    sortv = 5;
    color = "#2563eb";
    penwidth = 2;
    shape = "cylinder";
  ];
  "amazon" [
    likec4_id = "amazon";
    likec4_level = 0;
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="7"><TR><TD><FONT COLOR="#eff6ff" POINT-SIZE="14.25">Amazon</FONT></TD></TR><TR><TD><FONT COLOR="#bfdbfe" POINT-SIZE="10.5">Amazon is a cloud provider</FONT></TD></TR></TABLE>>;
    sortv = 6;
  ];
  subgraph "cluster_cloud" {
    likec4_id = "cloud";
    likec4_level = 0;
    label = <<B>CLOUD</B>>;
    likec4_depth = 2;
    graph [
      fontsize = 9.75;
      style = "rounded";
      margin = 30;
    ];
    "dashboard";
    "adminpanel";
    subgraph "cluster_backend" {
      likec4_id = "cloud.backend";
      likec4_level = 1;
      label = <<B>BACKEND</B>>;
      likec4_depth = 1;
      graph [
        fontsize = 9.75;
        style = "rounded";
        margin = 30;
      ];
      "graphql";
      "storage";
      "graphql" -> "storage" [
        likec4_id = "cloud.backend.graphql:cloud.backend.storage";
        weight = 10;
      ];
    }
    "adminpanel" -> "graphql" [
      likec4_id = "cloud.frontend.adminPanel:cloud.backend.graphql";
      weight = 5;
      label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="3" CELLSPACING="0"><TR><TD><FONT POINT-SIZE="10.5">fetches data in zero trust network with sso<BR/>authentification<BR ALIGN="LEFT"/></FONT></TD></TR></TABLE>>;
      nojustify = true;
    ];
    "dashboard" -> "graphql" [
      likec4_id = "cloud.frontend.dashboard:cloud.backend.graphql";
      weight = 5;
      label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="3" CELLSPACING="0"><TR><TD><FONT POINT-SIZE="10.5">fetches data</FONT></TD></TR></TABLE>>;
      nojustify = true;
    ];
  }
  "storage" -> "amazon" [
    likec4_id = "cloud.backend.storage:amazon";
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="3" CELLSPACING="0"><TR><TD><FONT POINT-SIZE="10.5">persists artifacts</FONT></TD></TR></TABLE>>;
    nojustify = true;
  ];
  "support" -> "adminpanel" [
    likec4_id = "support:cloud.frontend.adminPanel";
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="3" CELLSPACING="0"><TR><TD><FONT POINT-SIZE="10.5">manages</FONT></TD></TR></TABLE>>;
    nojustify = true;
  ];
  "customer" -> "dashboard" [
    likec4_id = "customer:cloud.frontend.dashboard";
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="3" CELLSPACING="0"><TR><TD><FONT POINT-SIZE="10.5">opens in browser</FONT></TD></TR></TABLE>>;
    nojustify = true;
  ];
}"
`;

exports[`printToDot > computedCloudView 1`] = `
"digraph {
  layout = "dot";
  compound = true;
  pad = 0.1042;
  rankdir = "TB";
  outputorder = "nodesfirst";
  nodesep = 0.8334;
  ranksep = 0.9375;
  pack = 15;
  packmode = "array_t";
  graph [
    fontname = "Helvetica";
    labeljust = "l";
    fontsize = 9;
  ];
  edge [
    fontname = "Helvetica";
    fontsize = 10.5;
    style = "solid";
    penwidth = 2;
    arrowsize = 0.8;
    color = "#b1b1b1";
    fontcolor = "#b1b1b1";
  ];
  node [
    fontname = "Helvetica";
    fontsize = 14.25;
    shape = "rect";
    width = 3.3334;
    height = 1.875;
    style = "filled,rounded";
    fillcolor = "#3b82f6";
    margin = 0.2084;
    penwidth = 0;
  ];
  "customer" [
    likec4_id = "customer";
    likec4_level = 0;
    label = <<FONT COLOR="#eff6ff" POINT-SIZE="14.25">customer</FONT>>;
    sortv = 0;
  ];
  "support" [
    likec4_id = "support";
    likec4_level = 0;
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="7"><TR><TD><FONT COLOR="#eff6ff" POINT-SIZE="14.25">Support Engineer</FONT></TD></TR><TR><TD><FONT COLOR="#bfdbfe" POINT-SIZE="10.5">Support engineers are responsible for<BR/>supporting customers<BR/></FONT></TD></TR></TABLE>>;
    sortv = 1;
  ];
  "frontend" [
    likec4_id = "cloud.frontend";
    likec4_level = 1;
    label = <<FONT COLOR="#eff6ff" POINT-SIZE="14.25">Frontend</FONT>>;
    sortv = 2;
  ];
  "backend" [
    likec4_id = "cloud.backend";
    likec4_level = 1;
    label = <<FONT COLOR="#eff6ff" POINT-SIZE="14.25">Backend</FONT>>;
    sortv = 3;
  ];
  "amazon" [
    likec4_id = "amazon";
    likec4_level = 0;
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="7"><TR><TD><FONT COLOR="#eff6ff" POINT-SIZE="14.25">Amazon</FONT></TD></TR><TR><TD><FONT COLOR="#bfdbfe" POINT-SIZE="10.5">Amazon is a cloud provider</FONT></TD></TR></TABLE>>;
    sortv = 4;
  ];
  subgraph "cluster_cloud" {
    likec4_id = "cloud";
    likec4_level = 0;
    label = <<B>CLOUD</B>>;
    likec4_depth = 1;
    graph [
      fontsize = 9.75;
      style = "rounded";
      margin = 30;
    ];
    "frontend";
    "backend";
    "frontend" -> "backend" [
      likec4_id = "cloud.frontend:cloud.backend";
      weight = 10;
      label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="3" CELLSPACING="0"><TR><TD><FONT POINT-SIZE="10.5">fetches data</FONT></TD></TR></TABLE>>;
      nojustify = true;
    ];
  }
  "backend" -> "amazon" [
    likec4_id = "cloud.backend:amazon";
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="3" CELLSPACING="0"><TR><TD><FONT POINT-SIZE="10.5">persists artifacts</FONT></TD></TR></TABLE>>;
    nojustify = true;
  ];
  "support" -> "frontend" [
    likec4_id = "support:cloud.frontend";
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="3" CELLSPACING="0"><TR><TD><FONT POINT-SIZE="10.5">manages</FONT></TD></TR></TABLE>>;
    nojustify = true;
  ];
  "customer" -> "frontend" [
    likec4_id = "customer:cloud.frontend";
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="3" CELLSPACING="0"><TR><TD><FONT POINT-SIZE="10.5">opens in browser</FONT></TD></TR></TABLE>>;
    nojustify = true;
  ];
}"
`;

exports[`printToDot > computedIndexView 1`] = `
"digraph {
  layout = "dot";
  compound = true;
  pad = 0.1042;
  rankdir = "TB";
  outputorder = "nodesfirst";
  nodesep = 0.8334;
  ranksep = 0.9375;
  pack = 15;
  packmode = "array_t";
  graph [
    fontname = "Helvetica";
    labeljust = "l";
    fontsize = 9;
  ];
  edge [
    fontname = "Helvetica";
    fontsize = 10.5;
    style = "solid";
    penwidth = 2;
    arrowsize = 0.8;
    color = "#b1b1b1";
    fontcolor = "#b1b1b1";
  ];
  node [
    fontname = "Helvetica";
    fontsize = 14.25;
    shape = "rect";
    width = 3.3334;
    height = 1.875;
    style = "filled,rounded";
    fillcolor = "#3b82f6";
    margin = 0.2084;
    penwidth = 0;
  ];
  "customer" [
    likec4_id = "customer";
    likec4_level = 0;
    label = <<FONT COLOR="#eff6ff" POINT-SIZE="14.25">customer</FONT>>;
    sortv = 0;
  ];
  "support" [
    likec4_id = "support";
    likec4_level = 0;
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="7"><TR><TD><FONT COLOR="#eff6ff" POINT-SIZE="14.25">Support Engineer</FONT></TD></TR><TR><TD><FONT COLOR="#bfdbfe" POINT-SIZE="10.5">Support engineers are responsible for<BR/>supporting customers<BR/></FONT></TD></TR></TABLE>>;
    sortv = 1;
  ];
  "cloud" [
    likec4_id = "cloud";
    likec4_level = 0;
    label = <<FONT COLOR="#eff6ff" POINT-SIZE="14.25">cloud</FONT>>;
    sortv = 2;
  ];
  "amazon" [
    likec4_id = "amazon";
    likec4_level = 0;
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="7"><TR><TD><FONT COLOR="#eff6ff" POINT-SIZE="14.25">Amazon</FONT></TD></TR><TR><TD><FONT COLOR="#bfdbfe" POINT-SIZE="10.5">Amazon is a cloud provider</FONT></TD></TR></TABLE>>;
    sortv = 3;
  ];
  "cloud" -> "amazon" [
    likec4_id = "cloud:amazon";
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="3" CELLSPACING="0"><TR><TD><FONT POINT-SIZE="10.5">persists artifacts</FONT></TD></TR></TABLE>>;
    nojustify = true;
  ];
  "support" -> "cloud" [
    likec4_id = "support:cloud";
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="3" CELLSPACING="0"><TR><TD><FONT POINT-SIZE="10.5">manages</FONT></TD></TR></TABLE>>;
    nojustify = true;
  ];
  "customer" -> "cloud" [
    likec4_id = "customer:cloud";
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="3" CELLSPACING="0"><TR><TD><FONT POINT-SIZE="10.5">opens in browser</FONT></TD></TR></TABLE>>;
    nojustify = true;
  ];
}"
`;
